--- a/style.css
+++ b/style.css
@@ -35,3 +35,29 @@ header {
     background-image: -o-linear-gradient(#424E61 #4ebfe9); #4ebfe9)
 }color: white;
 display: flex;
+justify-content: center;
+    align-items: center;
+    padding: 24px 0;
+}
+
+.escola-div-conteudo {
+    width: 35%;
+}
+
+.escola-titulo {
+    padding: 24px 0;
+}
+
+.estudante-imagem {
+    width: 30%;
+}
+
+.estudante-icone {
+    width: 25px;
+    padding: 4px 8px;
+}
+
+.estudante-div {
+    text-align: center;
+    padding: 16px 0;
+}
