--- a/style.css
+++ b/style.css
@@ -31,11 +31,11 @@ header {
 
 }
 
-.escola{
-    background-image: -o-linear-gradient(#424E61 #4ebfe9); #4ebfe9)
-}color: white;
-display: flex;
-justify-content: center;
+.escola {
+    background-image: linear-gradient(#424E61, #4EBFE9);
+    color: white;
+    display: flex;
+    justify-content: center;
     align-items: center;
     padding: 24px 0;
 }
