--- a/style.css
+++ b/style.css
@@ -61,3 +61,16 @@ header {
     text-align: center;
     padding: 16px 0;
 }
+
+.estudante-titulo{
+    text-align: center ;
+    padding: 50px 0;
+    .rodape{
+        background-color: black;
+        text-align: center;
+    }
+    .roape-imagem{
+        height: 60px;
+        padding: 12px 0;
+    }
+}
