--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+ body {
+    font-family: 'Roboto', sans-serif;
+ }
+ 
 header {
     background-color: #424E61;
     color: white;
