--- a/style.css
+++ b/style.css
@@ -1,80 +1,12 @@
-*{
-    margin: 0;
-    padding: 0;
-}
+@import url(/styles/apresentacao.css);
+@import url(/styles/header.css);
 
- body {
-    font-family: 'Roboto', sans-serif;
- }
- 
-header {
-    background-color: #424E61;
-    color: white;
-}
+:root {
+  --cor-principal:  #FF66C4 
+  --cor-2:#DO9EFF
+  --cor-3:#80CEFF 
+  --cor-4#32F4FF
+  --cor-preto:#000000
+  --cor-branco:#ffffff
 
-.cabecalho {
-    background-color: #424E61;
-    color: white;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 24px 0;
-}
-
-.cabecalho-imagem {
-    width: 20%;
-}
-
-.cabecalho-lista-item {
-    display: inline-block;
-    margin: 0 16px;
-    font-size: 24px;
-
- .escola-imagem{
-    width:25%; ;
-
-}
-
-.escola {
-    background-image: linear-gradient(#424E61, #4EBFE9);
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 24px 0;
-}
-
-.escola-div-conteudo {
-    width: 35%;
-}
-
-.escola-titulo {
-    padding: 24px 0;
-}
-
-.estudante-imagem {
-    width: 30%;
-}
-
-.estudante-icone {
-    width: 25px;
-    padding: 4px 8px;
-}
-
-.estudante-div {
-    text-align: center;
-    padding: 16px 0;
-}
-
-.estudante-titulo{
-    text-align: center ;
-    padding: 50px 0;
-    .rodape{
-        background-color: black;
-        text-align: center;
-    }
-    .roape-imagem{
-        height: 60px;
-        padding: 12px 0;
-    }
 }
