--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@
 @import url(/styles/header.css);
 
 :root {
-  --cor-principal:  #FF66C4 
-  --cor-2:#DO9EFF
-  --cor-3:#80CEFF 
-  --cor-4#32F4FF
-  --cor-preto:#000000
-  --cor-branco:#ffffff
+  --cor-principal:  #FF66C4 ;
+  --cor-2:#DO9EFF;
+  --cor-3:#80CEFF ;
+  --cor-4#32F4FF;
+  --cor-preto:#000000;
+  --cor-branco:#ffffff;
 
 }
