--- a/styles/#header.css
+++ b/styles/#header.css
@@ -41,3 +41,19 @@
 .container__botao:checked~.cabecalho-lista{
     display: block;
 }
+
+    .container__botao{
+     display:none;
+    
+    }
+
+    .cabecalho-lista-titulo {
+        padding: : 1em;
+        color: var (--preto);
+        font-weight : 700;
+        text-transform:uppercase;
+    }
+
+    .cabecalho-lista-item{
+        padding: ;
+    }
