--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 :root {
   --cor-principal:  #FF66C4 ;
   --cor-2: #D09EFF ;
-  --cor-3:#80CEFF ;
+  --cor-3:#32F4FF ;
   --cor-4:#32F4FF;
   --cor-preto:#000000;
   --cor-branco:#ffffff;
