--- a/styles/apresentacao.css
+++ b/styles/apresentacao.css
@@ -17,7 +17,7 @@ header {
     color: white;
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    align-items: chttps://wa.me/5541999589774?text=Sou+o+Prof.+Gerson.+Como+posso+ajudar%3Fenter;
     padding: 24px 0;
 }
 
