--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -12,7 +12,7 @@
     width: 100%;
 }
 
-.swiper-button-prev,
+.swiper-buttonhttps://wa.me/5541999589774?text=Sou+o+Prof.+Gerson.+Como+posso+ajudar%3F-prev,
 .swiper-button-next {
     display: none;
 }
