--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 @import url(/styles/flashcard.css);
 :root {
   --cor-principal:  #FF66C4 ;
-  --cor-2: #D09EFF ;
+  --cor-secundaria: #D09EFF ;
   --cor-3:#32F4FF ;
   --cor-4:#32F4FF;
   --cor-preto:#000000;
