--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -1,4 +1,4 @@
-.carrossel_titulo{
+.carrossel__titulo {
     color: var(--cor-principal);
     background-color: var(--cor-secundaria);
     text-align: center;
@@ -12,7 +12,7 @@
     width: 100%;
 }
 
-.swiper-buttonhttps://wa.me/5541999589774?text=Sou+o+Prof.+Gerson.+Como+posso+ajudar%3F-prev,
+.swiper-button-prev,
 .swiper-button-next {
     display: none;
 }
@@ -35,40 +35,48 @@
     justify-content: space-between;
     margin-bottom: 0.5em;
 }
-.botoes{
+
+.card__botoes {
+    display: flex;
+    justify-content: space-between;
+}
+
+.botoes {
     display: flex;
 }
 
-.descriçao__titulo{
-   color: var (--cor-secundaria);
-   font-weight: 700;
-}
-   
-.descriçao__titulo-produto{
-   color: var(--cor-rosa);
-   font-size: 18px;
-   font-weight: 700;
-   margin: 0,5em 0;
+.descricao__titulo {
+    color: var(--cor-branco);
+    font-weight: 700;
 }
 
-.descriçao__texto{
+.descricao__titulo-produto {
+    color: var(--cor-azul);
+    font-size: 18px;
+    font-weight: 700;
+    margin: 0.5em 0;
+}
+
+.descricao__imagem {
+    width: 300px;
+}
+
+.descricao__texto {
     font-size: 14px;
 }
 
-.botoes__ancora{
-    background-color: var(--cor azul);
+.botoes__ancora {
+    background-color: var(--cor-azul);
     padding: 1em 2.2em;
-    color: var(--cor branco);
+    color: var(--cor-branco);
     font-weight: 700;
     text-decoration: none;
 }
 
 .botoes__item {
-    list-style-type:none;
+    list-style-type: none;
     margin: 0 0.5em;
 }
-
-
 
 @media screen and (min-width: 1024px) {
     .carrossel__titulo {
