--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -1,3 +1,8 @@
+.carrossel__container {
+    margin: 2em auto;
+
+}
+
 .carrossel__titulo {
     color: var(--cor-principal);
     background-color: var(--cor-secundaria);
@@ -8,18 +13,29 @@
     padding: 1em 0 0.5em 0;
 }
 
-.swiper-slide img {
-    width: 100%;
+.swiper {
+    width: 90%;
 }
 
-.swiper-button-prev,
-.swiper-button-next {
-    display: none;
+.swiper-slide{
+    text-align: center;
+    font-size: 18px;
+    background: #fff; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.swiper-slide img {
+    width: 100%;
+    height:auto; /*Mantem a proporçao da imagem */
+    max-height: 400px;
+    object-fit: cover; /* Ajusta a imagem para preencher o conteiner */
 }
 
 .swiper-pagination {
     position: initial;
-    margin: 0.5em 0;
+    margin: 1em 0;
 }
 
 .card {
@@ -39,6 +55,12 @@
 .card__botoes {
     display: flex;
     justify-content: space-between;
+    position: relative;
+}
+
+.botoes_item img {
+    cursor: pointer;
+    transition: transform 0.3s;
 }
 
 .botoes {
@@ -83,25 +105,29 @@
         font-size: 26px;
     }
 
-    .swiper-pagination {
-        margin: 2em 0 3em 0;
+    .swiper {
+        width: 75%;
     }
 
-    .swiper {
-        width: 60%;
+    .swiper-pagination {
+        margin: 1em 0;
     }
 
     .swiper-button-prev,
     .swiper-button-next {
         display: block;
-        top: 60%;
+        top: 50%;
+    }
+
+    .card {
+        width: 40%;
+        margin: 2em auto;
     }
 }
-
 @media screen and (min-width: 1728px) {
     .carrossel__container {
         display: flex;
-        margin: 0 20vw 3em 20vw;
+        margin: 3em 20vw 3em 20vw;
         align-items: center;
     }
 
@@ -112,5 +138,21 @@
     .swiper {
         width: 50%;
     }
+    
+    .descricao__titulo {
+        font-size: 32px;
+    }
 
+    .descricao__texto {
+        font-size: 16px;
+    }
+
+    .descricao {
+        margin-right: 2em;
+    }
+
+    .card {
+        width: 50%;
+        margin-left: 3em;
+    }
 }
