--- a/styles/flashcard.css
+++ b/styles/flashcard.css
@@ -1,5 +1,5 @@
 #flashcard {
-    background-color: #D09EFF;
+    background-color: bisque;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
