--- a/styles/flashcard.css
+++ b/styles/flashcard.css
@@ -1,5 +1,5 @@
 #flashcard {
-    background-color:  #e073b7;
+    background-color:  #f02ba4;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
