--- a/styles/flashcard.css
+++ b/styles/flashcard.css
@@ -1,5 +1,5 @@
 #flashcard {
-    background-color:  #f79adf;
+    background-color:  #dd9af7;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
