--- a/styles/flashcard.css
+++ b/styles/flashcard.css
@@ -1,5 +1,5 @@
 #flashcard {
-    background-color:  #dd9af7;
+    background-color:  #e2b5f3;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
