--- a/styles/flashcard.css
+++ b/styles/flashcard.css
@@ -1,5 +1,5 @@
 #flashcard {
-    background-color:  #ee1ec1;
+    background-color:  #f55cd4;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
