--- a/styles/apresentacao.css
+++ b/styles/apresentacao.css
@@ -12,7 +12,7 @@ body {
 }
 
 .escola {
-    background-image: linear-gradient(#424E61, #FF66C4 );
+    background-image: linear-gradient( #FF66C4,#D09EFF );
     color: white;
     display: flex;
     justify-content: center;
