--- a/styles/flashcard.css
+++ b/styles/flashcard.css
@@ -46,15 +46,15 @@
     padding: 2rem;
     margin-top: 3rem;
     font-size: 1.4vw;
-}#db81c8;
+}
 
 .cartao__conteudo__pergunta p {
-    color: var(--cor-principal);
+    color: var(--cor-branco);
     font-weight: 500;
 }
 
 .cartao__conteudo__resposta p {
-    color: var(--cor-secundaria);
+    color: var(--cor-branco);
     font-weight: 700;
 }
 
