--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 :root {
   --cor-principal:  #e073b7 ;
-  --cor-secundaria  #D09EFF ;
+  --cor-secundaria: #D09EFF ;
   --cor-3:#32F4FF ;
   --cor-4:#32F4FF;
   --cor-preto:#000000;
