--- a/styles/flashcard.css
+++ b/styles/flashcard.css
@@ -27,8 +27,8 @@
 }
 
 .cartao__conteudo h3 {
-    background-color: var(--cor-preto);
-    color: var(--cor-branco);
+    background-color: var(--cor-branco);
+    color: var(--cor-preto);
     border: 1px solid var(--cor-branco);
     text-align: center;
     text-transform: uppercase;
