--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -39,7 +39,7 @@
 }
 
 .card {
-    background: var(#000000);
+    background: var(--cor-azul);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
     margin: 1em;
