--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -39,7 +39,7 @@
 }
 
 .card {
-    background: var(--cor-branco);
+    background: var(--cor-preto);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
     margin: 1em;
@@ -50,6 +50,7 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 0.5em;
+    
 }
 
 .card__botoes {
