--- a/style.css
+++ b/style.css
@@ -12,3 +12,29 @@
   --cor-branco:#ffffff;
 
 }
+
+.menu-acessibilidade{
+    position: fixed;
+    top:3rem;
+    right:20px;
+    z-index: 1000;
+}
+
+.rotacao-botao{
+    transform: rotate(-90deg);
+    transform-origin: right center;
+}
+
+.opcoes-acessibilidade{
+    margin-top:10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.opcoes-acessibilidade button{
+    margin-bottom: 5px;
+}
+
+.apresenta-lista{
+    display: none;
+}
