--- a/styles/header.css
+++ b/styles/header.css
@@ -14,7 +14,7 @@ main {
   z-index: 1000;
 }
 
-.container {
+.container1 {
   display: flex;
   justify-content: space-between;
   align-items: center;
