--- a/style.css
+++ b/style.css
@@ -4,10 +4,10 @@
 @import url(/styles/flashcard.css);
 
 :root {
-  --cor-principal:  #e073b7 ;
-  --cor-secundaria: #D09EFF ;
-  --cor-3:#32F4FF ;
-  --cor-4:#32F4FF;
+  --cor-principal:  #e8e15f ;
+  --cor-secundaria: #e19248 ;
+  --cor-3:#d6e876 ;
+  --cor-4:#eaf273;
   --cor-preto:#000000;
   --cor-branco:#ffffff;
 
